# manager-ec

./: .gitignore  README.md  add_shipping_columns.py  check_postgres_product.py  check_product.py  deploy.sh  fetch_shopee_reviews.py  fix_syntax.py  hardcode_urls.py  insert_mock_reviews.py  insert_shopee_simulated_reviews.py  list_routes.py  log.txt  migrate_firestore.py  netstat.txt  replace_urls.py  restart.bat  schema.md  start.bat  test_api.py  test_cancel.py  test_cancel2.py  test_cancel_admin.py  test_order2.py  test_orders_me.py  test_ports.py
backend/: .dockerignore  .env.example  DEV_GUIDE.md  Dockerfile  add_admin_column.py  add_mock_products.py  add_pg_columns.py  add_review_table.py  add_sellable_column.py  add_temperature_column.py  add_variants_column.py  alcohol_names.txt  alter_orders.py  alter_orders_cancel.py  alter_orders_ecpay.py  alter_pg.py  alter_pg_specs.py  categories.json  check_categories.py  check_order.py  check_order_user.py  check_product.py  check_product_name.py  check_products_schema.py  check_pwd.py  check_returning_orders.py  check_user.py  create_channel_table.py  create_newsletter_table.py  database.py  debug_ecpay.py  fetch_alcohol_names.py  generate_collages.py  generate_collages_ai.py  init_db.py  main.py  make_public.py  migrate_orders.py  migrate_products_pricing.py  mososhop.db  (+46 more)
backend/core/: dependencies.py  security.py
backend/models/: __init__.py  channel.py  external_affiliate.py  newsletter.py  order.py  product.py  review.py  user.py  wallet.py
backend/routers/: __init__.py  admin.py  chat.py  external_affiliate.py  (+8 more)
(+72 files in other folders)
